# pieceofmind

./: .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  FINDINGS.md  FIXES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: correctness_debugger.py  few_shot_attribution.py  hello.py  known_limits.py  marketing_attribution.py  prompt_section_attribution.py
measurements/: README.md  llm_seam.py  m21_correctness_debugger.py  m22a_interacting_rules.py
measurements/recorded/: M21_result.md  M22a_result.md
src/pieceofmind/: __init__.py  __main__.py  attribution.py  checkers.py  provenance.py
tests/: test_pieceofmind.py
